# mywikibot

./: .gitignore  README.md  setup.cfg
mywikibot/: __init__.py  bot.py  util.py
