[metadata]
name = mywikibot
version = attr: mywikibot.__version__
url = https://github.com/Yuukin256/mywikibot
author = Yuukin256
license_file = LICENSE
description = Personal Pywikibot
long_description = file: README.md

[options]
zip_safe = False
packages = find:
install_requires =
  pywikibot
  wikitextparser
